# STRIDER_MPC_MuJoCo

./: .gitignore  CMakeLists.txt  Readme.md
apps/: main.cpp  strider_logger.py
include/: flight_control.hpp  gradient_ascent.hpp  gyro_ekf.hpp  mj_viewer_helper.hpp  mmap_manager.hpp  mpc_wrapper.hpp  params.hpp  utils.hpp
resources/geometry_ctrl/include/: fdcl_common_types.hpp  fdcl_control.hpp
resources/geometry_ctrl/src/: fdcl_control.cpp  fdcl_matrix_utils.cpp
resources/mpc_py/: model.py  mpc_viewer.py  params.py  solver.py  viewer.py
resources/mpc_py/no_cot/: costs.py  model.py  params.py
resources/mpc_py/use_arm/: costs.py  model.py
resources/mpc_py/use_delta/: costs.py  model.py
resources/mpc_py/use_full/: costs.py  model.py
resources/mpc_py/yes_cot/: costs.py  model.py  params.py
resources/mujoco/: JellyFish.xml  scene.xml
src/: flight_control.cpp  mj_viewer_helper.cpp  mpc_wrapper.cpp
